# rpenguin

./: Cargo.toml  flake.nix  todo.md
.direnv/: flake-profile-1-link
assets/shaders/: shader.wgsl
assets/shaders/engine/: grid.wgsl
src/: camera.rs  lib.rs  macros.rs  main.rs
src/engine/: camera.rs  egui_tools.rs  impls.rs  instance.rs  mesh.rs  mod.rs  prelude.rs  render_pipeline.rs  texture.rs  timer.rs  vert.rs
src/engine/rendering/: grid_renderer.rs  mod.rs
src/particle/: simulation.rs
