[package]
name = "rpenguin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"
pollster = "0.3.0"
bytemuck = { version = "1.16.1", features = ["derive"] }
image = "0.25.2"
anyhow = "1.0.86"
cgmath = { version = "0.18.0", features = ["swizzle"] }

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

